--- a/Deel/templates/Deel/index.html
+++ b/Deel/templates/Deel/index.html
@@ -303,7 +303,7 @@
                     <div class="portfolios">
 
                         
-                        <div class="portfolio-item">
+                        {% comment %} <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port2.jpg' %}" alt="port1" />
                             </div>
@@ -342,7 +342,7 @@
                                     ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                         <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port8.jpg' %}" alt="port1" />
@@ -381,7 +381,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="portfolio-item">
+                        {% comment %} <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port6.jpg' %}" alt="port1" />
                             </div>
@@ -399,7 +399,7 @@
                                     ></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                         <div class="portfolio-item">
                             <div class="image">
                                 <img src="{% static './images/port7.jpg' %}" alt="port1" />
@@ -479,7 +479,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="blog">
+                        {% comment %} <div class="blog">
                             <img src="{% static './images/blog1.jpg' %}" alt="blog1" />
                             <div class="blog-text">
                                 <h4>How to Create A Website</h4>
@@ -590,7 +590,7 @@
                                     voluptatum ea!
                                 </p>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                 </div>
             </section>
@@ -634,7 +634,7 @@
                                         <i class="fas fa-user-graduate"></i>
                                         <span>Mobile Number</span>
                                     </div>
-                                    <p>:+256704279303/+256787346687</p>
+                                    <p>+256704279303/+256787346687</p>
                                 </div>
                                 <div class="contact-item">
                                     <div class="icon">
@@ -646,9 +646,9 @@
                             </div>
                             <div class="contact-icons">
                                 <div class="contact-icon">
-                                    <a href="#" target="_blank"
+                                    {% comment %} <a href="#" target="_blank"
                                         ><i class="fa-brands fa-facebook"></i
-                                    ></a>
+                                    ></a> {% endcomment %}
                                     <a href="https://x.com/kanzashizug" target="_blank"
                                         ><i class="fa-brands fa-twitter"></i
                                     ></a>
